--- a/mage1.html
+++ b/mage1.html
@@ -69,6 +69,20 @@
     th {
       	text-align: center;
     }
+	@media (max-width: 768px) {
+  		.grid-container {
+    		display: flex;
+    		flex-direction: column;
+    		gap: 1%;
+    		justify-content: center;
+    		margin-top: 20px;
+			margin-left: auto;
+			margin-right: auto;
+  		}
+  		.grid-container table {
+  			width: 75%;
+  		}
+	}
   </style>
 	<div id="check">
 		<table>
@@ -154,6 +168,12 @@
 			<tr>
 				<td><img id="nota" src="Zombie.gif" alt="Zombie"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Zombie" target="_blank">Zombie</a></p><input class="nota" type="checkbox"></td>
 			</tr>
+			<tr>
+				<td><img id="nota" src="Demon_Eye.gif" alt="Demon_Eye"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Demon_Eye" target="_blank">Demon Eye</a></p><input class="nota" type="checkbox"></td>
+			</tr>
+			<tr>
+				<td><img id="nota" src="Blue_Slime.gif" alt="Blue_Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Slimes" target="_blank">Blue Slime</a></p><input class="nota" type="checkbox"></td>
+			</tr>						
 		</table>
 </div>	
 <div id="button">
