--- a/summon1.html
+++ b/summon1.html
@@ -69,6 +69,20 @@
     th {
       	text-align: center;
     }
+	@media (max-width: 768px) {
+  		.grid-container {
+    		display: flex;
+    		flex-direction: column;
+    		gap: 1%;
+    		justify-content: center;
+    		margin-top: 20px;
+			margin-left: auto;
+			margin-right: auto;
+  		}
+  		.grid-container table {
+  			width: 75%;
+  		}
+	}
   </style>
 	<table>
 		<tr><th colspan="5"><h1>Part One: Pre-Boss Summoner</h1></th></tr>
