--- a/summon1.html
+++ b/summon1.html
@@ -104,10 +104,10 @@
 			
 		</tr>
 	</table>
+<div class="grid-container">	
 	<table>
 		<tr>
 			<th colspan="7"><h2>Notable Items</h2></th>
-			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
 		</tr>
 		<tr>
 			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
@@ -117,11 +117,9 @@
 			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Abigail's_Flower.webp" alt="Abigail's Flower"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Abigail's_Flower" target="_blank">Abigail's Flower</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Mana_Crystal.webp" alt="Mana_Crystal"><p class="nota"><p>Mana Crystal</p><input class="nota" type="checkbox"></td>						
-			<td colspan="6"><p>No effect yet.</p></td>
 		</tr>
 		<tr>
 			<th colspan="7"><h2>Crafting/Obtainment</h2></th>
-			<th><h2>Expert Drop</h2></th>
 		</tr>
 		<tr>
 			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
@@ -131,17 +129,30 @@
 			<td ><p>Found in Undergound<br>Gold Chests</p></td>
 			<td ><p>Chance to spawn<br>next to Gravestones.</p></td>
 			<td><a href="https://terraria.wiki.gg/wiki/Fallen_Star" target="_blank"><p>5x Fallen Star</p></a><img id="nota" src="Fallen_Star.webp" alt="Star"></td>
-            <td><p>No bosses fought</p></td>
 		</tr>						
 	</table>
 	<table>
 		<tr>
+			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
+		</tr>
+		<tr>
+			<td colspan="6"><p>No effect yet.</p></td>
+		</tr>
+		<tr>
+			<th><h2>Expert Drop</h2></th>
+		</tr>
+		<tr>
+	       <td><p>No bosses fought</p></td>			
+		</tr>
+	</table>
+</div>
+<div class="grid-container">	
+	<table>
+		<tr>
 			<th><h2>Notable NPCs</h2></th>
-			<th><h2>Notable Enemies</h2></th>
 		</tr>
 		<tr>
 			<td><img id="nota" src="Map_Icon_Guide.webp" alt="Guide"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Guide" target="_blank">Guide</a></p><input class="nota" type="checkbox"></td>	
-			<td><img id="nota" src="Zombie.gif" alt="Zombie"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Zombie" target="_blank">Zombie</a></p><input class="nota" type="checkbox"></td>			</tr>
 		<tr>
 			<td><img id="nota" src="Map_Icon_Merchant.webp" alt="Merchant"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Merchant" target="_blank">Merchant</a></p><input class="nota" type="checkbox"></td>	
 		</tr>	
@@ -149,6 +160,21 @@
 			<td><img id="nota" src="Map_Icon_Nurse.webp" alt="Nurse"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Nurse" target="_blank">Nurse</a></p><input class="nota" type="checkbox"></td>
 		</tr>						
 	</table>
+	<table>
+		<tr>
+			<th><h2>Notable Enemies</h2></th>
+		</tr>
+		<tr>
+			<td><img id="nota" src="Zombie.gif" alt="Zombie"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Zombie" target="_blank">Zombie</a></p><input class="nota" type="checkbox"></td>
+		</tr>
+		<tr>
+			<td><img id="nota" src="Demon_Eye.gif" alt="Demon_Eye"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Demon_Eye" target="_blank">Demon Eye</a></p><input class="nota" type="checkbox"></td>
+		</tr>
+		<tr>
+			<td><img id="nota" src="Blue_Slime.gif" alt="Blue_Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Slimes" target="_blank">Blue Slime</a></p><input class="nota" type="checkbox"></td>
+		</tr>						
+	</table>
+</div>	
 	<button>
 		<a href="mage2.html"><p>Next Page</p></a>
 	</button>
