--- a/ranger1.html
+++ b/ranger1.html
@@ -104,6 +104,7 @@
 			
 		</tr>
 	</table>
+<div class="grid-container">	
 	<table>
 		<tr>
 			<th colspan="6"><h2>Notable Items</h2></th>
@@ -141,7 +142,9 @@
 		<tr>
 	       <td><p>No bosses fought</p></td>			
 		</tr>
-	</table>	
+	</table>
+</div>	
+<div class="grid-container">	
 	<table>
 		<tr>
 			<th><h2>Notable NPCs</h2></th>
@@ -172,7 +175,8 @@
 		<tr>
 			<td><img id="nota" src="Blue_Slime.gif" alt="Blue_Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Slimes" target="_blank">Blue Slime</a></p><input class="nota" type="checkbox"></td>
 		</tr>						
-	</table>	
+	</table>
+</div>			
 	<button>
 		<a href="ranger2.html"><p>Next Page</p></a>
 	</button>
