--- a/melee1.html
+++ b/melee1.html
@@ -78,13 +78,20 @@
     		margin-top: 20px;
 			margin-left: auto;
 			margin-right: auto;
+			padding: 0px;
+			font-size: 10px;
   		}
   		.grid-container table {
   			width: 75%;
   		}
+		img#checklist{
+			width: 100%;
+			height: 100%;
+			margin: auto;
+		}
 	}
   </style>
-  </style>
+<div class="grid-container">
 	<table>
 		<tr><th colspan="5"><h1>Part One: Pre-Boss Mage</h1></th></tr>
 		<tr>
@@ -100,11 +107,9 @@
 			<td><img id="checklist" src="320px-Solid_tiles_example.webp" alt="Mines"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
 			<td><img id="checklist" src="300px-Two_heart_crystals.webp" alt="Crystals"><p>Since you will be getting up-close an personal with enemies, collecting <a href="https://terraria.wiki.gg/wiki/Life_Crystal" target="_blank">life crystals</a> is a priority to you. Each life crystal raises your maximun HP by 20 (caps at 400). You don't HAVE to max out your HP yet, but it will deffinetely save you time to do it now. </p><input type="checkbox"></td>
 			<td><img id="checklist" src="Boss_arena.png" alt="Setting_up_arena"><p>Gearing up is important, escpecially before you fight your first boss. Setting up a boss arena is also important, and also very simple to do. You'll set up a long row of platforms (not tiles). Platforms are like tiles, but they allow you fall through and jump through. Set up a couple layers of them, and you should be ready. </p><input type="checkbox"></td>
-		</tr>
-		<tr>
-			
-		</tr>
+		</tr>	
 	</table>
+</div>	
 <div class="grid-container">
 	<table>
 		<tr>
