--- a/melee1.html
+++ b/melee1.html
@@ -85,9 +85,17 @@
   			width: 75%;
   		}
 		img#checklist{
-			width: 100%;
-			height: 100%;
+			width: 55px;
+			height: 40px;
 			margin: auto;
+		}
+		img#nota{
+			width: 40%;
+			height: 40%;
+			margin: auto;
+		}
+		table{
+			align-self: center;
 		}
 	}
   </style>
@@ -156,13 +164,13 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Map_Icon_Guide.webp" alt="Guide"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Guide" target="_blank">Guide</a></p><input class="nota" type="checkbox"></td>	
+			<td><img id="npc" src="Map_Icon_Guide.webp" alt="Guide"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Guide" target="_blank">Guide</a></p><input class="nota" type="checkbox"></td>	
 		</tr>
 		<tr>	
-			<td><img id="nota" src="Map_Icon_Merchant.webp" alt="Merchant"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Merchant" target="_blank">Merchant</a></p><input class="nota" type="checkbox"></td>	
+			<td><img id="npc" src="Map_Icon_Merchant.webp" alt="Merchant"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Merchant" target="_blank">Merchant</a></p><input class="nota" type="checkbox"></td>	
 		</tr>	
 		<tr>	
-			<td><img id="nota" src="Map_Icon_Nurse.webp" alt="Nurse"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Nurse" target="_blank">Nurse</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Map_Icon_Nurse.webp" alt="Nurse"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Nurse" target="_blank">Nurse</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>	
 	<table>
@@ -170,13 +178,13 @@
 			<th><h2>Notable Enemies</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Zombie.gif" alt="Zombie"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Zombie" target="_blank">Zombie</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Zombie.gif" alt="Zombie"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Zombie" target="_blank">Zombie</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Demon_Eye.gif" alt="Demon_Eye"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Demon_Eye" target="_blank">Demon Eye</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Demon_Eye.gif" alt="Demon_Eye"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Demon_Eye" target="_blank">Demon Eye</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Blue_Slime.gif" alt="Blue_Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Slimes" target="_blank">Blue Slime</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Blue_Slime.gif" alt="Blue_Slime"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Slimes" target="_blank">Blue Slime</a></p><input class="nota" type="checkbox"></td>
 		</tr>						
 	</table>
 </div>	
