--- a/melee1.html
+++ b/melee1.html
@@ -97,11 +97,18 @@
 		table{
 			align-self: center;
 		}
+		th, td {
+			padding: 5px;
+		}
+		td > img#checklist {
+			display: inline;
+      		padding: 5px;
+    }
 	}
   </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part One: Pre-Boss Mage</h1></th></tr>
+		<tr><th colspan="5"><h1>Part One: Pre-Boss Melee</h1></th></tr>
 		<tr>
 			<th>Starting off</th>
 			<th>Exploration</th>
