--- a/ranger1.html
+++ b/ranger1.html
@@ -78,12 +78,35 @@
     		margin-top: 20px;
 			margin-left: auto;
 			margin-right: auto;
+			padding: 0px;
+			font-size: 10px;
   		}
   		.grid-container table {
   			width: 75%;
   		}
+		img#checklist{
+			width: 55px;
+			height: 40px;
+			margin: auto;
+		}
+		img#nota{
+			width: 40%;
+			height: 40%;
+			margin: auto;
+		}
+		table{
+			align-self: center;
+		}
+		th, td {
+			padding: 5px;
+		}
+		td > img#checklist {
+			display: inline;
+      		padding: 5px;
+    	}
 	}
-  </style>
+</style>
+<div id="grid-container">
 	<table>
 		<tr><th colspan="5"><h1>Part One: Pre-Boss Ranger</h1></th></tr>
 		<tr>
@@ -100,10 +123,8 @@
 			<td><img id="checklist" src="300px-Two_heart_crystals.webp" alt="Crystals"><p>Even though you won't be getting as close eo enemies, <a href="https://terraria.wiki.gg/wiki/Life_Crystal" target="_blank">life crystals</a> are still important to find. Each life crystal raises your maximun HP by 20 (caps at 400). You don't HAVE to max out your HP yet, but it will deffinetely save you time to do it now. </p><input type="checkbox"></td>
 			<td><img id="checklist" src="Boss_arena.png" alt="Setting_up_arena"><p>Gearing up is important, escpecially before you fight your first boss. Setting up a boss arena is also important, and also very simple to do. You'll set up a long row of platforms (not tiles). Platforms are like tiles, but they allow you fall through and jump through. Set up a couple layers of them, and you should be ready. </p><input type="checkbox"></td>
 		</tr>
-		<tr>
-			
-		</tr>
 	</table>
+</div>	
 <div class="grid-container">	
 	<table>
 		<tr>
