--- a/mage1.html
+++ b/mage1.html
@@ -41,6 +41,7 @@
       	text-align: center;
       	padding: 10px;
       	color: rgb(223, 179, 36);
+		font-size: 18px;
     }
 
     td > img#checklist {
@@ -99,6 +100,7 @@
 		}
 		th, td {
 			padding: 5px;
+			font-size: 10px;
 		}
 		td > img#checklist {
 			display: inline;
