--- a/melee7.html
+++ b/melee7.html
@@ -109,7 +109,7 @@
 </style>
 <div class="grid-container">
 	<table>
-		<tr><th colspan="5"><h1>Part Two: Eye of Cthulhu Melee</h1></th></tr>
+		<tr><th colspan="5"><h1>Part Seven: Queen Slime Melee</h1></th></tr>
 		<tr>
 			<th>Demonic Purge</th>
 			<th>The Evil of the World</th>
