--- a/melee2.html
+++ b/melee2.html
@@ -116,9 +116,9 @@
 			<th>Boss Fight #1</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>Unless you have already encountered a Suspicious Looking Eye in a chest, you will need to wait until night to start taking out Demon Eyes for their lenses (6 to be exact).</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>You Will have to bring these lenses to a Demon Alter in your Evil Biome. Evil Biomes are colored either Red (for the crimson biome) or Purple (for the corruption). THe alters are found underground, but traverse carefully. Not every plummet downwards will bring you to the right location.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>After creating the Suspicious Looking Eye, you will need to wait until night to defeat your first boss. The Eye of Cthulhu.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -152,13 +152,13 @@
 			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
 		</tr>
 		<tr>
-			<td><p>No effect yet.</p></td>
+			<img id="nota" src="Shield_of_Cthulhu.webp" alt="Shield_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Shield_of_Cthulhu" target="_blank">Shield of Cthulhu</a></p><input class="nota" type="checkbox"></td>			
 		</tr>	
 		<tr>
 			<th><h2>Expert Drop</h2></th>
 		</tr>
 		<tr>
-			<td><p>No bosses fought</p></td>
+			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
 		</tr>		
 	</table>
 </div>
