--- a/melee4.html
+++ b/melee4.html
@@ -111,9 +111,9 @@
 	<table>
 		<tr><th colspan="5"><h1>Part Four: Skeletron and the Underworld Melee</h1></th></tr>
 		<tr>
-			<th>Demonic Purge</th>
-			<th>The Evil of the World</th>
-			<th>Boss Fight #1</th>
+			<th>The Deep End</th>
+			<th>It isn't a Castle</th>
+			<th>Boss Fight #3</th>
 		</tr>
 		<tr>
 			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
