--- a/melee5.html
+++ b/melee5.html
@@ -111,14 +111,12 @@
 	<table>
 		<tr><th colspan="5"><h1>Part Five: The Wall of Flesh Melee</h1></th></tr>
 		<tr>
-			<th>Demonic Purge</th>
-			<th>The Evil of the World</th>
-			<th>Boss Fight #1</th>
+			<th>Long Preparations</th>
+			<th>Boss Fight #4</th>
 		</tr>
 		<tr>
 			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
 			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
