--- a/melee8.html
+++ b/melee8.html
@@ -113,7 +113,7 @@
 		<tr>
 			<th>Demonic Purge</th>
 			<th>The Evil of the World</th>
-			<th>Boss Fight #1</th>
+			<th>Boss Fight #6-8</th>
 		</tr>
 		<tr>
 			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>The best course of action for any class is to start building <a href="https://terraria.wiki.gg/wiki/House" target="_blank">houses.</a> Each house is required to have an area of 60 tiles, a table, and a chair. The shape of the house doesn't matter too much though.</p><input type="checkbox"></td>			
