--- a/ranger1.html
+++ b/ranger1.html
@@ -137,7 +137,7 @@
 			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Boomstick.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Boomstick" target="_blank">Boomstick</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Boomstick.webp" alt="Boomstick"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Boomstick" target="_blank">Boomstick</a></p><input class="nota" type="checkbox"></td>			
 		</tr>	
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
