--- a/melee3.html
+++ b/melee3.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">It's time to start cleansing the world of evil!</h2>
+	<p id="welcome">The world is full of evil, and it's your job to stop it. You'll need to travel to the evil biomes and defeat the bosses that lurk within.</p>
   <style>
     table {
       	border-collapse: collapse;
@@ -116,9 +116,9 @@
 			<th>Boss Fight #2</th>
 		</tr>
 		<tr>
-			<td><img id="checklist"src="maxresdefault.jpg" alt="Night"><p>Next on the to-do list is the Evil Boss. The boss is different for both biomes, but will ultimately </p><input type="checkbox"></td>			
-			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
-			<td><img id="checklist" src="Eye_Of_Cthulhu_Fight.jpg" alt="Boss_Fight"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
+			<td><img id="checklist"src="Corrupt_Desert_Biome.webp" alt="Corruption"><p>Next on the to-do list is the Evil Boss. The boss is different for both biomes, but will ultimately end up defeated.</p><input type="checkbox"></td>			
+			<td><img id="checklist"src="29-15-029.jpg" alt="Underground"><p>After building, learn more about your world. Travel so that you mini-map updates and so that you know how your world is structured.</p><input type="checkbox"></td>
+			<td><img id="checklist" src="eater-of-worlds.jpg" alt="Boss_Fight2"><p>Your next priority is simple, mining. Most of your best weapon options will come from the caves, though it can most certainly be dangerous.<br>You can discover many minerals and abandonded houses that can get you many different useful items. You should also remember to upgrade your pickaxe with your resources, some minerals may be harder too mine than others.</p><input type="checkbox"></td>
 		</tr>	
 	</table>
 </div>	
@@ -128,23 +128,23 @@
 			<th colspan="6"><h2>Notable Items</h2></th>
 		</tr>
 		<tr>
-			<td><img id="nota" src="Platinum_Pickaxe.webp" alt="Platinum_Pickaxe"><img id="nota" src="Gold_Pickaxe.webp" alt="Gold_Pickaxe"><p class="nota">Platinum/Gold Pickaxe</p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Platinum_armor.webp" alt="Platinum_armor"><img id="nota" src="Gold_armor.webp" alt="Gold_armor"><p class="nota">Platinum/Gold Armor</p><input class="nota" type="checkbox"></td>	
+			<td><img id="nota" src="Nightmare_Pickaxe.webp" alt="Nightmare_Pickaxe"><img id="nota" src="Deathbringer_Pickaxe.webp" alt="Deathbringer_Pickaxe"><p class="nota">Nightmare/Deathbringer Pickaxe</p><input class="nota" type="checkbox"></td>
+			<td><img id="nota" src="Shadow_armor.webp" alt="Shadow_armor"><img id="nota" src="Crimson_armor.webp" alt="Crimson_armor"><p class="nota">Shadow/Crimson Armor</p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Light's_Bane" target="_blank">Light's Bane</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
 		</tr>
 		<tr>
-			<td><p>10x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"><br><p>4x Wood</p><img id="nota" src="Wood.webp" alt="wood"></td>
-			<td><p>75x Gold/Platinum Bar</p><img id="nota" src="Gold_Bar.webp" alt="gold"><img id="nota" src="Platinum_Bar.webp" alt="platinum"></td>
+			<td><p>12x Demonite/Crimtane Bar</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"><img id="nota" src="Crimtane_Bar.webp" alt="Crimtane"><br><p>6x Shadow Scales/Tissue Samples</p><img id="nota" src="Shadow_Scale.webp" alt="Shadow_Scale"><img id="nota" src="Tissue_Sample.webp" alt="Tissue_Sample"></td>
+			<td><p>60x Demonite/Crimtane Bar</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"><img id="nota" src="Crimtane_Bar.webp" alt="Crimtane"><br><p>45x Shadow Scales/Tissue Samples</p><img id="nota" src="Shadow_Scale.webp" alt="Shadow_Scale"><img id="nota" src="Tissue_Sample.webp" alt="Tissue_Sample"></td>
 			<td ><p>Found in Undergound Gold Chests</p></td>
 			<td ><p>Found in Undergound Gold Chests</p></td>
 			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>10x Demonite</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"></td>
 		</tr>				
 	</table>
 	<table>
@@ -152,13 +152,13 @@
 			<th><h2>Notable Items [Expert/Master Mode]</h2></th>
 		</tr>
 		<tr>
-			<td><p>No effect yet.</p></td>
+			<td><img id="nota" src="Worm_Scarf.webp" alt="Worm_Scarf"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Worm_Scarf" target="_blank">Worm Scarf</a></p><input class="nota" type="checkbox"></td>
 		</tr>	
 		<tr>
 			<th><h2>Expert Drop</h2></th>
 		</tr>
 		<tr>
-			<td><p>No bosses fought</p></td>
+			<td><img id="npc" src="Eater_of_Worlds_Head.webp" alt="Eater_of_Worlds"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eater_of_Worlds" target="_blank">Eater of Worlds</a></p><input class="nota" type="checkbox"></td>
 		</tr>		
 	</table>
 </div>
@@ -168,7 +168,7 @@
 			<th><h2>Notable NPCs</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Map_Icon_Dryad.webp" alt="Dryad"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Dryad" target="_blank">Dryad</p><input class="nota" type="checkbox"></td>	
+			<td><p class="nota">No new notable NPCs</p></td>	
 		</tr>
 	</table>	
 	<table>
@@ -176,7 +176,7 @@
 			<th colspan="2"><h2>Notable Bosses</h2></th>
 		</tr>
 		<tr>
-			<td><img id="npc" src="Eye_of_Cthulhu_(Phase_1).gif" alt="Eye_of_Cthulhu"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eye_of_Cthulhu" target="_blank">Eye of Cthulhu</a></p><input class="nota" type="checkbox"></td>
+			<td><img id="npc" src="Eater_of_Worlds_Head.webp" alt="Eater_of_Worlds"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Eater_of_Worlds" target="_blank">Eater of Worlds</a></p><input class="nota" type="checkbox"></td>
 		</tr>
 	</table>
 </div>	
