--- a/melee4.html
+++ b/melee4.html
@@ -27,8 +27,8 @@
     <img id="logo2" src="TTLogo.png"
 	    alt="TTLogo"
 	>
-	<h2 id="welcome">Now that you've gotten a handle on things, it's time for you to fight your first boss!</h2>
-	<p id="welcome">The gear you have obtained and the arena you have created will be very useful, now get out there and win!</p>
+	<h2 id="welcome">With your second boss down, You should be ready for whats next to come.</h2>
+	<p id="welcome">Preparation is important for this stage and the next stage of the game, so be careful.</p>
   <style>
     table {
       	border-collapse: collapse;
