--- a/melee2.html
+++ b/melee2.html
@@ -133,7 +133,7 @@
 			<td><img id="nota" src="Band_of_Regeneration.webp" alt="Band_of_Regeneration"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Band_of_Regeneration" target="_blank">Band of Regeneration</a></p><input class="nota" type="checkbox"></td>	
 			<td><img id="nota" src="Hermes_Boots.webp" alt="Hermes_Boots"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Hermes_Boots" target="_blank">Hermes Boots</a></p><input class="nota" type="checkbox"></td>
 			<td><img id="nota" src="Cloud_in_a_Bottle.webp" alt="Cloud_in_a_Bottle"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Cloud_in_a_Bottle" target="_blank">Cloud in a Bottle</a></p><input class="nota" type="checkbox"></td>
-			<td><img id="nota" src="Starfury.webp" alt="Starfury"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Starfury" target="_blank">Starfury</a></p><input class="nota" type="checkbox"></td>			
+			<td><img id="nota" src="Light's_Bane.webp" alt="Light's_Bane"><p class="nota"><a href="https://terraria.wiki.gg/wiki/Light's_Bane" target="_blank">Light's Bane</a></p><input class="nota" type="checkbox"></td>			
 		</tr>
 		<tr>
 			<th colspan="6"><h2>Crafting</h2></th>
@@ -144,7 +144,7 @@
 			<td ><p>Found in Undergound Gold Chests</p></td>
 			<td ><p>Found in Undergound Gold Chests</p></td>
 			<td ><p>Found in Undergound Gold Chests</p></td>
-			<td ><p>Found in Sky Island Chests</p></td>
+			<td><p>10x Demonite</p><img id="nota" src="Demonite_Bar.webp" alt="Demonite"></td>
 		</tr>				
 	</table>
 	<table>
